--- a/files/config.json
+++ b/files/config.json
@@ -12,11 +12,18 @@
       "identifiers": {
         "glazing": {
           "Solar Heat Gain Coefficient": {
-            "alg": "MonteCarlo",
+            "alg": "Predefined",
             "parameters": {
-              "min": 0.20,
-              "max": 0.90,
-              "precision": 0.01
+              "values": [
+              "0.20",
+              "0.30",
+              "0.40",
+              "0.50",
+              "0.60",
+              "0.70",
+              "0.80",
+              "0.90"
+              ]
             }
           }
         }
@@ -45,12 +52,24 @@
     },
     "EnergyManagementSystem:Program": {
       "A17": {
-        "alg": "MonteCarlo",
+        "alg": "Predefined",
         "parameters": {
-          "min": 0.05,
-          "max": 0.90,
-          "text":"SET Controle_jan1 = ",
-          "precision": 0.01
+          "values": [
+              "0.05",
+              "0.12",
+              "0.19",
+              "0.26",
+              "0.33",
+              "0.40",
+              "0.47",
+              "0.54",
+              "0.61",
+              "0.68",
+              "0.75",
+              "0.82",
+              "0.89"
+              ],
+          "text":"SET Controle_jan1 = "
         },
         "change": {
           "EnergyManagementSystem:Program": {
@@ -104,11 +123,21 @@
       "identifiers": {
         "eW_U": {
           "Thermal Resistance {m2-K/W}": {
-            "alg": "MonteCarlo",
+            "alg": "Predefined",
             "parameters": {
-              "min": 0.10,
-              "max": 3.16,
-              "precision": 0.01
+              "values": [
+              "3.16",
+              "1.39",
+              "0.85",
+              "0.59",
+              "0.43",
+              "0.33",
+              "0.26",
+              "0.20",
+              "0.16",
+              "0.13",
+              "0.10"
+              ]
             }
           }
         }
@@ -118,19 +147,36 @@
       "identifiers": {
         "eW_HC": {
           "Density {kg/m3}": {
-            "alg": "MonteCarlo",
+            "alg": "Predefined",
             "parameters": {
-              "min": 100,
-              "max": 3600,
-              "precision": 10
+              "values": [
+              "100",
+              "450",
+              "800",
+              "1150",
+              "1500",
+              "1850",
+              "2200",
+              "2550",
+              "2900",
+              "3250",
+              "3600"
+              ]
             }
           },
           "Solar Absorptance": {
-            "alg": "MonteCarlo",
+            "alg": "Predefined",
             "parameters": {
-              "min": 0.20,
-              "max": 0.90,
-              "precision": 0.01
+              "values": [
+              "0.20",
+              "0.30",
+              "0.40",
+              "0.50",
+              "0.60",
+              "0.70",
+              "0.80",
+              "0.90"
+              ]
             }
           }
         }
@@ -140,11 +186,20 @@
             "identifiers": {
               "Zn1_par1_brise": {
                 "Depth as Fraction of Window/Door Height {dimensionless}": {
-                  "alg": "MonteCarlo",
+                  "alg": "Predefined",
                   "parameters": {
-                    "min": 0.01,
-                    "max": 1.00,
-                    "precision": 0.01
+                    "values": [
+                    "0.01",
+                    "0.09",
+                    "0.18",
+                    "0.27",
+                    "0.36",
+                    "0.47",
+                    "0.58",
+                    "0.70",
+                    "0.84",
+                    "1.00"
+                    ]
               },
               "change": {
                 "Shading:Overhang:Projection": {
@@ -160,11 +215,17 @@
                           "identifiers": {
                             "Zn1_par1_jan": {
                               "Vertex 1 Z-coordinate {m}": {
-                                "alg": "MonteCarlo",
+                                "alg": "Predefined",
                                 "parameters": {
-                                  "min": 1.02,
-                                  "max": 2.67,
-                                  "precision": 0.01
+                                  "values": [
+                                  "1.03",
+                                  "1.30",
+                                  "1.58",
+                                  "1.85",
+                                  "2.13",
+                                  "2.40",
+                                  "2.68"
+                                  ]
                                 },
                                 "change": {
                                   "Shading:Fin:Projection": {
